Fix font flickering by using web-safe fonts

--- a/modern_basic/style.css
+++ b/modern_basic/style.css
@@ -7,9 +7,9 @@
   --line-height: 1.5;
   --font-size-regular: 20px;
   --font-size-small: 14px;
-  --font-family-serif: "noto_serif_bundled", "Noto Serif";
-  --font-family-sans: "noto_sans_bundled", "Noto Sans";
-  --font-family-code: "jetbrains_mono_bundled", "JetBrains Mono";
+  --font-family-serif: Georgia, serif, "Noto Serif", "noto_serif_bundled";
+  --font-family-sans: Arial, sans-serif, "Noto Sans", "noto_sans_bundled";
+  --font-family-code: "JetBrains Mono", "jetbrains_mono_bundled";
 }
 
 /* ----- Colors ----- */
